00-liferay-configs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liferay
