02-liferay-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: liferay-mysql
  namespace: liferay
  labels:
    app: liferay
    tier: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: liferay
    tier: mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liferay-mysql
  namespace: liferay
  labels:
    app: liferay
    tier: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liferay
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: liferay
      labels:
        app: liferay
        tier: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7.43
        resources:
          requests:
            memory: "200Mi"
          limits:
            memory: "512Mi"
        args:
          - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: liferay-mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: liferay-mysql-storage
        persistentVolumeClaim:
          claimName: liferay-mysql-pvc
