04-liferay-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: liferay-portal
  namespace: liferay
  labels:
    app: liferay
    tier: portal
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: liferay
    tier: portal

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liferay-portal
  namespace: liferay
  labels:
    app: liferay
    tier: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liferay
      tier: portal
  strategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: liferay
      labels:
        app: liferay
        tier: portal
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      containers:
      - name: liferay
        image: liferay/portal:7.3.7-ga8
        resources:
          requests:
            memory: "2800Mi"
            ephemeral-storage: 1Gi
          limits:
            memory: "2900Mi"
            ephemeral-storage: 1Gi
        ports:
        - containerPort: 11311
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: "/c/portal/layout"
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 15
          failureThreshold: 3
          successThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 20
          failureThreshold: 3
          successThreshold: 1
        volumeMounts:
        - name: liferay-data-pvc
          mountPath: /opt/liferay/data
        - name: liferay-config-pvc
          mountPath: /mnt/liferay

      restartPolicy: Always

      volumes:
      - name: liferay-data-pvc
        persistentVolumeClaim:
          claimName: liferay-data
      - name: liferay-config-pvc
        persistentVolumeClaim:
          claimName: liferay-config
      - name: portal-config
        configMap:
          name: liferay-portal-config
      - name: search-config
        configMap:
          name: liferay-search-config
